a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Michael_Ho/invalid5.min
# Assignment of string to variable of type int

var a : int;
var b : string;

b = "hello";

a = b;
